--- a/public/profile.html
+++ b/public/profile.html
@@ -456,6 +456,30 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input class="form-control m-input" type="text" value="L-12-20 Vertex, Cybersquare">
 														</div>
 													</div>
+													<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
+													<div class="form-group m-form__group row">
+														<div class="col-10 ml-auto">
+															<h3 class="m-form__section">
+																2. Change Password
+															</h3>
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="example-text-input" class="col-2 col-form-label">
+															New Password*
+														</label>
+														<div class="col-7">
+															<input class="form-control m-input" type="password" placeholder="enter new password">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="example-text-input" class="col-2 col-form-label">
+															Retype Password*
+														</label>
+														<div class="col-7">
+															<input class="form-control m-input" type="password" placeholder="retype password">
+														</div>
+													</div>
 												</div>
 												<div class="m-portlet__foot m-portlet__foot--fit">
 													<div class="m-form__actions"><center>
