Added Users Page and small other changes

--- a/public/home.html
+++ b/public/home.html
@@ -287,7 +287,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																</li>
 																<li class="m-nav__separator m-nav__separator--fit"></li>
 																<li class="m-nav__item">
-																	<center><a href="snippets/pages/user/login-1.html" class="btn m-btn--default btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
+																	<center><a href="login.html" class="btn m-btn--default btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
 																		<i class="m-nav__link-icon fa fa-sign-out"></i>
 																		Logout
 																	</a>
