Added add user page and more

--- a/public/add_user.html
+++ b/public/add_user.html
@@ -398,9 +398,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
 												<span class="m-portlet__head-icon">
-													<i class="fa fa-user-circle-o"></i>
+													<i class="fa fa-user-plus"></i>
 												</span>
-												<h3 class="m-portlet__head-text">Profile</h3>
+												<h3 class="m-portlet__head-text">Add User</h3>
 											</div>
 										</div>
 									</div>
@@ -418,27 +418,27 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="fullname" class="col-2 col-form-label">
-															Full Name
+															Full Name*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="Mark Andre">
+															<input class="form-control m-input" type="text" placeholder="enter full name">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
-															Email
+															Email*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" disabled value="johndoe@gmail.com">
+															<input class="form-control m-input" type="text" placeholder="enter email">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="example-text-input" class="col-2 col-form-label">
-															Date of Birth
+															Date of Birth*
 														</label>
 														<div class="col-10">
 															<div class='input-group date' id='m_datepicker_2'>
-															<input class="form-control m-input" type="text" readonly value="01/27/1996"/>
+															<input class="form-control m-input" type="text" readonly placeholder="pick a date"/>
 															<span class="input-group-addon">
 																<i class="fa fa-calendar"></i>
 															</span>
@@ -447,18 +447,18 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="example-text-input" class="col-2 col-form-label">
-															Phone No.
+															Phone No.*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="+456669067890">
+															<input class="form-control m-input" type="text" placeholder="enter phone no.">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
-															NIC
+															NIC*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" disabled value="960271157v" >
+															<input class="form-control m-input" type="text" placeholder="enter NIC">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -466,28 +466,28 @@ License: You must have a valid license purchased only from themeforest(the above
 															Address
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="L-12-20 Vertex, Cybersquare">
+															<input class="form-control m-input" type="text" placeholder="enter address">
 														</div>
 													</div>
 													<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
 													<div class="form-group m-form__group row">
 														<div class="col-10 ml-auto">
 															<h3 class="m-form__section">
-																2. Change Password
+																2. Password
 															</h3>
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="example-text-input" class="col-2 col-form-label">
-															New Password
+															Password*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="password" placeholder="enter new password">
+															<input class="form-control m-input" type="password" placeholder="enter password">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="example-text-input" class="col-2 col-form-label">
-															Retype Password
+															Retype Password*
 														</label>
 														<div class="col-10">
 															<input class="form-control m-input" type="password" placeholder="retype password">
@@ -499,7 +499,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														<div class="row">
 															<div class="col-12">
 																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom">
-																	Save changes
+																	Add User
 																</button>
 																&nbsp;&nbsp;
 																<button type="reset" class="btn btn-secondary m-btn m-btn--air m-btn--custom">
