--- a/public/users.html
+++ b/public/users.html
@@ -420,7 +420,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-											<a href="new_user.html" class="btn btn-primary m-btn m-btn--custom m-btn--icon m-btn--air m-btn--default">
+											<a href="add_user.html" class="btn btn-primary m-btn m-btn--custom m-btn--icon m-btn--air m-btn--default">
 												<span>
 													<i class="fa fa-user-plus"></i>
 													<span>
