--- a/public/home.html
+++ b/public/home.html
@@ -394,8 +394,10 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!--Begin::Main Portlet-->
 						<div class="m-portlet">
 							<div class="m-portlet__body  m-portlet__body--no-padding">
-								<div class="row m-row--no-padding m-row--col-separator-xl">
-									<div id="m_gmap_3" style="height:550px;"></div>
+								<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-map">
+									<div id="m_gmap_3" style="height:550px; width: 100%;">
+										<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc"></script>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -720,6 +722,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Snippets -->
 		<script src="assets/js/home.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
+
+		<!--begin:: src to angular -ng-app -ng-controller -->
+		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
+		<script type="text/javascript" src="./javascripts/app.main.js"></script>
+		<script type="text/javascript" src="./javascripts/map-load.js"></script>
+		<!--end::src to ng-app and ng-controller-->
 	</body>
 	<!-- end::Body -->
 </html>
