infoWindow default styles changed

--- a/public/map-infoWindow.html
+++ b/public/map-infoWindow.html
@@ -17,25 +17,33 @@
     <div id="content-div" class="col-12">
         <div class="row">
             <div class="col-lg-1"></div>
-            <h2 class="col-lg-5">Junction Details</h2>
+            <h2 class="col-sm-10">Junction Details</h2>
         </div>
         <div id="junction-data" class="container-fluid">
             <div class="row">
-                <h4 class="col-sm-5">Junction ID:</h4>
+                <h4 class="col-sm-7">Junction ID:</h4>
                 <h4><span class="label label-default col-sm-11">010J</span></h4>
             </div>
             <div class="row">
-                <h4 class="col-sm-5">Junction Name:</h4>
+                <h4 class="col-sm-7">Junction Name:</h4>
                 <h4><span class="label label-default col-sm-11">010J</span></h4>
             </div>
             <div class="row">
-                <h4 class="col-sm-5">Officer in-charge:</h4>
+                <h4 class="col-sm-7">Officer in-charge:</h4>
                 <h4><span class="label label-default col-sm-11">010J</span></h4>
             </div>
         </div>
         <div id="junction-stats" class="container-fluid">
             <div class="row">
                 <h4 class="col-sm-6">Current Traffic:</h4>
+            </div>
+            <div id="btn-group" class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="btn-group" role="group">
+                        <button class="btn btn-primary">View Statistics</button>
+                    </div>
+                </div>
             </div>
             <div class="row">
                     <canvas id="traffic-graph" class="col-sm-3" style="height: 100px"></canvas>
@@ -82,14 +90,7 @@
 
             </div>
         </div>
-        <div id="btn-group" class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4"></div>
-                <div class="btn-group" role="group">
-                    <button class="btn btn-primary">View Statistics</button>
-                </div>
-            </div>
-        </div>
+
     </div>
 </div>
 
