--- a/public/junction.html
+++ b/public/junction.html
@@ -360,7 +360,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</span>
 								</a>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="junction.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-road"></i>
 									<span class="m-menu__link-text">
@@ -374,7 +374,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu " aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="users.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-user-circle-o"></i>
 									<span class="m-menu__link-text">
@@ -391,56 +391,340 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- BEGIN: Subheader -->
 					<!-- END: Subheader -->
 					<div class="m-content">
-						<div class="m-portlet m-portlet--mobile">
-							<div class="m-portlet__head">
-								<div class="m-portlet__head-caption">
-									<div class="m-portlet__head-title">
-										<h3 class="m-portlet__head-text">
-											Users
-										</h3>
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="m-portlet">
+									<div class="m-portlet__body  m-portlet__body--no-padding">
+										<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-map">
+											<div id="m_gmap_3" style="height:550px; width: 100%;">
+												<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc"></script>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="m-portlet__body">
-								<!--begin: Search Form -->
-								<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-									<div class="row align-items-center">
-										<div class="col-xl-8 order-2 order-xl-1">
-											<div class="form-group m-form__group row align-items-center">
-												<div class="col-md-6">
-													<div class="m-input-icon m-input-icon--left">
-														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="m_form_search">
-														<span class="m-input-icon__icon m-input-icon__icon--left">
-															<span>
-																<i class="fa fa-search"></i>
-															</span>
-														</span>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-											<a href="add_user.html" class="btn btn-primary m-btn m-btn--custom m-btn--icon m-btn--air m-btn--default">
-												<span>
-													<i class="fa fa-user-plus"></i>
-													<span>
-														Add User
-													</span>
-												</span>
-											</a>
-											<div class="m-separator m-separator--dashed d-xl-none"></div>
+							<div class="col-lg-6">
+								<div class="m-portlet m-portlet--tabs">
+									<div class="m-portlet__head">
+
+										<div class="m-portlet__head-tools">
+											<ul class="nav nav-tabs m-tabs m-tabs-line   m-tabs-line--left m-tabs-line-danger" role="tablist">
+												<li class="nav-item m-tabs__item">
+													<a class="nav-link m-tabs__link active" data-toggle="tab" href="#m_portlet_base_demo_1_tab_content" role="tab">
+														Control Settings
+													</a>
+												</li>
+												<!--
+												<li class="nav-item m-tabs__item">
+													<a class="nav-link m-tabs__link" data-toggle="tab" href="#m_portlet_base_demo_1_tab_content" role="tab">
+														Messages
+													</a>
+												</li>
+												<li class="nav-item m-tabs__item">
+													<a class="nav-link m-tabs__link" data-toggle="tab" href="#m_portlet_base_demo_1_tab_content" role="tab">
+														Settings
+													</a>
+												</li>
+											-->
+											</ul>
 										</div>
 									</div>
+									<div class="tab-centent">
+									<form class="m-form m-form--fit m-form--label-align-right">
+										<div class="m-portlet__body">
+										<div class="form-group m-form__group row">
+											<div class="col-10 ml-auto">
+												<h3 class="m-form__section">
+													1. North Lane
+												</h3>
+											</div>
+										</div>
+										<div class="m-form__group form-group">
+											<label for="" class="col-3 col-form-label">
+												Lane 01
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="nlane1" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="nlane1" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="nlane1" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 02
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="nlane2" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="nlane2" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="nlane2" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 03
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="nlane3" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="nlane3" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="nlane3" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+										</div>
+										<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
+										<div class="form-group m-form__group row">
+											<div class="col-10 ml-auto">
+												<h3 class="m-form__section">
+													2. East Lane
+												</h3>
+											</div>
+										</div>
+										<div class="m-form__group form-group">
+											<label for="" class="col-3 col-form-label">
+												Lane 01
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="elane1" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="elane1" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="elane1" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 02
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="elane2" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="elane2" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="elane2" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 03
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="elane3" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="elane3" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="elane3" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+										</div>
+
+										<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
+
+
+										<div class="form-group m-form__group row">
+											<div class="col-10 ml-auto">
+												<h3 class="m-form__section">
+													3. South Lane
+												</h3>
+											</div>
+										</div>
+										<div class="m-form__group form-group">
+											<label for="" class="col-3 col-form-label">
+												Lane 01
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="slane1" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="slane1" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="slane1" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 02
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="slane2" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="slane2" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="slane2" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 03
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="slane3" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="slane3" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="slane3" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+										</div>
+										<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
+
+
+										<div class="form-group m-form__group row">
+											<div class="col-10 ml-auto">
+												<h3 class="m-form__section">
+													4. West Lane
+												</h3>
+											</div>
+										</div>
+										<div class="m-form__group form-group">
+											<label for="" class="col-3 col-form-label">
+												Lane 01
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="wlane1" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="wlane1" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="wlane1" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 02
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="wlane2" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="wlane2" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="wlane2" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+											<label for="" class="col-3 col-form-label">
+												Lane 03
+											</label>
+											<div class="col-9">
+											<div class="m-radio-inline">
+												<label class="m-radio m-radio--bold m-radio--state-green">
+													<input type="radio" name="wlane3" value="1">go
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-orange">
+													<input type="radio" name="wlane3" value="2">wait
+													<span></span>
+												</label>
+												<label class="m-radio m-radio--bold m-radio--state-red">
+													<input type="radio" name="wlane3" value="3">stop
+													<span></span>
+												</label>
+											</div>
+										</div>
+
+										</div>
+									</div>
+									</form>
 								</div>
-								<!--end: Search Form -->
-								<!--begin: Datatable -->
-								<div class="m_datatable" id="local_data"></div>
-								<!--end: Datatable -->
+								</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 			<!-- end:: Body -->
 			<!-- begin::Footer -->
 			<footer class="m-grid__item		m-footer ">
