--- a/public/profile.html
+++ b/public/profile.html
@@ -249,7 +249,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																	</span>
 																</li>
 																<li class="m-nav__item">
-																	<a href="header/profile.html" class="m-nav__link">
+																	<a href="profile.html" class="m-nav__link">
 																		<i class="m-nav__link-icon fa fa-user-circle-o"></i>
 																		<span class="m-nav__link-title">
 																			<span class="m-nav__link-wrap">
@@ -345,7 +345,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="#" class="m-menu__link m-menu__toggle">
+								<a  href="statistics.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-bar-chart"></i>
 									<span class="m-menu__link-text">
 										Statistics
@@ -353,7 +353,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</a>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="#" class="m-menu__link m-menu__toggle">
+								<a  href="device.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-microchip"></i>
 									<span class="m-menu__link-text">
 										Device
@@ -361,7 +361,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</a>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="#" class="m-menu__link m-menu__toggle">
+								<a  href="junction.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-road"></i>
 									<span class="m-menu__link-text">
 										Junction
@@ -375,7 +375,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="#" class="m-menu__link m-menu__toggle">
+								<a  href="users.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-user-circle-o"></i>
 									<span class="m-menu__link-text">
 										Users
