Added Minor Changes

--- a/public/junction.html
+++ b/public/junction.html
@@ -393,7 +393,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="m-content">
 						<div class="row">
 							<div class="col-lg-6">
-								<div class="m-portlet m-portlet--full-height">
+								<div class="m-portlet m-portlet--rounded">
 									<div class="m-portlet__body  m-portlet__body--no-padding">
 										<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-map">
 											<div id="m_gmap_3" style="height:550px; width: 100%;">
@@ -402,9 +402,110 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 									</div>
 								</div>
+								<div class="m-portlet m-portlet--rounded"  style="margin-top: 30px;">
+									<div class="m-portlet__head">
+										<div class="m-portlet__head-caption">
+											<div class="m-portlet__head-title">
+												<h3 class="m-portlet__head-text">Junction History</h3>
+											</div>
+										</div>
+									</div>
+									<div class="m-portlet__body">
+										<div class="m-scrollable" data-scrollable="true" data-max-height="250" data-mobile-max-height="200">
+										<div class="m-list-timeline m-list-timeline--skin-light">
+													<div class="m-list-timeline__items">
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
+															<span class="m-list-timeline__text">
+																12 new users registered
+															</span>
+															<span class="m-list-timeline__time">
+																Just now
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																System shutdown
+																<span class="m-badge m-badge--success m-badge--wide">
+																	pending
+																</span>
+															</span>
+															<span class="m-list-timeline__time">
+																14 mins
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																New invoice received
+															</span>
+															<span class="m-list-timeline__time">
+																20 mins
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																DB overloaded 80%
+																<span class="m-badge m-badge--info m-badge--wide">
+																	settled
+																</span>
+															</span>
+															<span class="m-list-timeline__time">
+																1 hr
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																System error -
+																<a href="#" class="m-link">
+																	Check
+																</a>
+															</span>
+															<span class="m-list-timeline__time">
+																2 hrs
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																Production server down
+															</span>
+															<span class="m-list-timeline__time">
+																3 hrs
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span class="m-list-timeline__text">
+																Production server up
+															</span>
+															<span class="m-list-timeline__time">
+																5 hrs
+															</span>
+														</div>
+														<div class="m-list-timeline__item">
+															<span class="m-list-timeline__badge"></span>
+															<span href="" class="m-list-timeline__text">
+																New order received
+																<span class="m-badge m-badge--danger m-badge--wide">
+																	urgent
+																</span>
+															</span>
+															<span class="m-list-timeline__time">
+																7 hrs
+															</span>
+														</div>
+													</div>
+												</div>
+											</div>
+									</div>
+								</div>
 							</div>
 							<div class="col-lg-3">
-								<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet m-portlet--mobile m-portlet--rounded">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
@@ -497,7 +598,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 
 								</div>
-								<div class="m-portlet m-portlet--mobile" style="margin-top: 30px;">
+								<div class="m-portlet m-portlet--mobile m-portlet--rounded" style="margin-top: 30px;">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
@@ -592,7 +693,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 							<div class="col-lg-3">
-								<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet m-portlet--mobile m-portlet--rounded">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
@@ -685,7 +786,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 
 								</div>
-								<div class="m-portlet m-portlet--mobile" style="margin-top: 30px;">
+								<div class="m-portlet m-portlet--mobile m-portlet--rounded" style="margin-top: 30px;">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
