--- a/public/map-infoWindow - new.html
+++ b/public/map-infoWindow - new.html
@@ -34,7 +34,7 @@
     <div class="m-content">
       <div class="row">
         <div class="col-lg-12">
-          <div class="m-portlet m-portlet--full-height">
+          <div class="m-portlet">
             <div class="m-portlet__head">
               <div class="m-portlet__head-caption">
                 <center>
@@ -47,8 +47,6 @@
               </div>
             </div>
             <!-------------->
-
-            <div class="tab-content">
                 <form class="m-form m-form--fit m-form--label-align-right">
                   <div class="m-portlet__body">
 
@@ -90,8 +88,6 @@
                   </div>
 
                 </form>
-
-            </div>
           </div>
         </div>
       </div>
