--- a/public/profile.html
+++ b/public/profile.html
@@ -393,7 +393,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="m-content">
 						<div class="row">
 							<div class="col-lg-12">
-								<div class="m-portlet m-portlet--full-height">
+								<div class="m-portlet">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
 											<div class="m-portlet__head-title">
