Partially changed files

--- a/public/map-infoWindow - new.html
+++ b/public/map-infoWindow - new.html
@@ -28,12 +28,11 @@
 <body>
 
 
-  <div class="m-grid__item m-grid__item--fluid m-wrapper">
+
     <!-- BEGIN: Subheader -->
     <!-- END: Subheader -->
     <div class="m-content">
-      <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12" style="padding-left: 0px; padding-right: 0px;">
           <div class="m-portlet">
             <div class="m-portlet__head">
               <div class="m-portlet__head-caption">
@@ -50,7 +49,7 @@
                 <form class="m-form m-form--fit m-form--label-align-right">
                   <div class="m-portlet__body">
 
-                    <div class="form-group m-form__group row">
+                    <div class="form-group m-form__group">
                       <label for="fullname" class="col-2 col-form-label">
                         Junction ID:
                       </label>
@@ -58,7 +57,7 @@
                         <input class="form-control m-input" disabled type="text" value="J001">
                       </div>
                     </div>
-                    <div class="form-group m-form__group row">
+                    <div class="form-group m-form__group">
                       <label for="fullname" class="col-2 col-form-label">
                         Junction Name:
                       </label>
@@ -66,7 +65,7 @@
                         <input class="form-control m-input" disabled type="text" value="Sample Junction">
                       </div>
                     </div>
-                    <div class="form-group m-form__group row">
+                    <div class="form-group m-form__group">
                       <label for="fullname" class="col-2 col-form-label">
                         Officer in-charge:
                       </label>
@@ -74,7 +73,7 @@
                         <input class="form-control m-input" disabled type="text" value="John Doe">
                       </div>
                     </div>
-                    <div class="form-group m-form__group row">
+                    <div class="form-group m-form__group">
                       <label for="fullname" class="col-2 col-form-label">
                         Current Traffic:
                       </label>
@@ -90,9 +89,8 @@
                 </form>
           </div>
         </div>
-      </div>
+
     </div>
-  </div>
 
 
 
