--- a/public/junctions.html
+++ b/public/junctions.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			STLS | Home
+			STLS | Junctions
 		</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
@@ -280,7 +280,7 @@
 				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
 					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" data-menu-vertical="true" data-menu-scrollable="false" data-menu-dropdown-timeout="500">
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-							<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
+							<li class="m-menu__item " aria-haspopup="true" >
 								<a  href="home.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-home"></i>
 									<span class="m-menu__link-title">
@@ -298,7 +298,7 @@
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu  m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="junctions.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-road"></i>
 									<span class="m-menu__link-text">
@@ -350,20 +350,59 @@
 				</div>
 				<!-- END: Left Aside -->
 				<div class="m-grid__item m-grid__item--fluid m-wrapper">
-
+					<!-- BEGIN: Subheader -->
+					<!-- END: Subheader -->
 					<div class="m-content">
-
-						<!--Begin::Main Portlet-->
-						<div class="m-portlet m-portlet--rounded">
-							<div class="m-portlet__body  m-portlet__body--no-padding"  >
-								<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-map">
-									<div id="m_gmap_3" style="height:550px; width: 100%;">
-										<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc"></script>
+						<div class="m-portlet m-portlet--mobile m-portlet--rounded">
+							<div class="m-portlet__head">
+								<div class="m-portlet__head-caption">
+									<div class="m-portlet__head-title">
+										<span class="m-portlet__head-icon">
+											<i class="fa fa-road"></i>
+										</span>
+										<h3 class="m-portlet__head-text">
+											Junctions
+										</h3>
 									</div>
 								</div>
 							</div>
+							<div class="m-portlet__body">
+								<!--begin: Search Form -->
+								<div class="m-form m-form--label-align-right m--margin-bottom-30">
+									<div class="row align-items-center">
+										<div class="col-xl-8 order-2 order-xl-1">
+											<div class="form-group m-form__group row align-items-center"  style="padding-left: 0px;">
+												<div class="col-md-6">
+													<div class="m-input-icon m-input-icon--left">
+														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="m_form_search">
+														<span class="m-input-icon__icon m-input-icon__icon--left">
+															<span>
+																<i class="fa fa-search"></i>
+															</span>
+														</span>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-xl-4 order-1 order-xl-2 m--align-right">
+											<a href="add_junction.html" class="btn btn-primary m-btn m-btn--custom m-btn--icon m-btn--air m-btn--default">
+												<span>
+													<i class="fa fa-plus"></i>
+													<span>
+														Add Junction
+													</span>
+												</span>
+											</a>
+											<div class="m-separator m-separator--dashed d-xl-none"></div>
+										</div>
+									</div>
+								</div>
+								<!--end: Search Form -->
+								<!--begin: Datatable -->
+								<div class="m_datatable" id="local_data" ></div>
+								<!--end: Datatable -->
+							</div>
 						</div>
-						<!--End::Main Portlet-->
 					</div>
 				</div>
 			</div>
@@ -682,14 +721,8 @@
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
-		<script src="assets/js/home.js" type="text/javascript"></script>
+		<script src="assets/js/users.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
-
-		<!--begin:: src to -angularJs -ng-app -ng-controller -->
-		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
-		<script type="text/javascript" src="./javascripts/app.main.js"></script>
-		<script type="text/javascript" src="./javascripts/map-load.js"></script>
-		<!--end::src to ng-app and ng-controller-->
 	</body>
 	<!-- end::Body -->
 </html>
